--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  margin-left: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bg-dark {
+  background-color: #343a40 !important;
+}
+
+.submit-form {
+  max-width: 300px;
+  margin: auto;
+}
+
+.navbar-expand {
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+}
+
+.navbar {
+  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 0.5rem 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar a {
+  color: #999;
+  text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar a:hover {
+  color: #fff;
+}
+
+.navbar > a {
+  color: #fff;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar > a {
+    font-weight: normal;
   }
-  to {
-    transform: rotate(360deg);
+
+  .navbar ul {
+    display: flex;
+    gap: 0 20px;
   }
+}
+
+.navbar li {
+  list-style: none;
+}
+
+input {
+  position: relative;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  padding: 8px 20px;
+  border: 1px solid #999;
+  border-radius: 5px;
+}
+
+button {
+  background-color: #28a745;
+  border-color: #28a745;
+  border-radius: 0.25rem;
+  border: 1px solid transparent;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0.45rem 0.75rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+  margin-left: 5px;
+}
+
+.result-div {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.result-box {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: calc(23px - 20px);
+  margin: 12px;
+  background: #f1f1f1;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px 15px 60px;
+  position: relative;
+}
+
+.result-box p {
+  margin: 0;
+}
+
+.result-box button {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+
+.result-box img {
+  width: 265px;
 }
